Fix button layout bug

--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -60,7 +60,7 @@ body {
 }
 
 .play-again-btn {
-  margin: 6.5vh 0 0;
+  margin: 6.5vh auto;
 }
 
 .win-tie-message {
